--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kryon-language",
   "displayName": "Kryon Language Support",
-  "description": "Syntax highlighting for Kryon and Limbo programming languages",
+  "description": "Syntax highlighting for Kryon, Limbo, and KTML languages",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.75.0"
@@ -25,6 +25,12 @@
         "aliases": ["Limbo", "limbo"],
         "extensions": [".b"],
         "configuration": "./language-configuration-limbo.json"
+      },
+      {
+        "id": "ktml",
+        "aliases": ["KTML", "Kryon Text Markup Language"],
+        "extensions": [".ktml"],
+        "configuration": "./language-configuration-ktml.json"
       }
     ],
     "grammars": [
@@ -37,6 +43,11 @@
         "language": "limbo",
         "scopeName": "source.limbo",
         "path": "./syntaxes/limbo.tmLanguage.json"
+      },
+      {
+        "language": "ktml",
+        "scopeName": "source.ktml",
+        "path": "./syntaxes/ktml.tmLanguage.json"
       }
     ]
   },
